--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,55 @@
-.venv
-__pycache__
+.DS_Store
+Thumbs.db
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env files
+.env
+.env.*
+.env.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+
+# Build / output
+dist/
+build/
+.cache/
+.parcel-cache/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+env/
+ENV/
+pip-wheel-metadata/
+*.egg-info/
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Netlify / Vercel
+.netlify/
+.vercel/
+.vercel_build_output/
+
+# local server files
+local_server.js
+
+# Keys
+*.pem
+*.key
