--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "a simple domain checker",
   "main": "check_domain.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +19,6 @@
   "homepage": "https://github.com/muskiteer/domain-checker#readme",
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^5.1.0"
   }
 }
